# mcp-probe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_probe/: __main__.py  auth.py  cli.py  client.py  reporter.py  runner.py  schema_utils.py  types.py
src/mcp_probe/suites/: __init__.py  auth.py  base.py  edge_cases.py  jsonrpc.py  lifecycle.py  notifications.py  prompts.py  resources.py  tasks.py  tools.py
src/mcp_probe/transport/: __init__.py  base.py  http.py  sse.py  stdio.py
tests/: conftest.py  test_auth.py  test_client.py  test_e2e.py  test_http_transport.py  test_reporter.py  test_runner.py  test_schema_utils.py  test_stdio_transport.py  test_suites.py
tests/fixtures/: mock_server_broken.py  mock_server_minimal.py  mock_server_valid.py
