[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-probe"
version = "0.1.0"
description = "CLI validator for Model Context Protocol (MCP) server compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "validator", "testing", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
mcp-probe = "mcp_probe.cli:main"

[project.urls]
Homepage = "https://github.com/moon-strider/mcp-probe"
Documentation = "https://github.com/moon-strider/mcp-probe#readme"
Issues = "https://github.com/moon-strider/mcp-probe/issues"

[project.optional-dependencies]
full = ["jsonschema>=4.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
